<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KDoctor</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="re_prompt_password">Nhắc lại mật khẩu</string>
    <string name="action_sign_in">ĐĂNG NHẬP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="facebook_app_id">1211280139003614</string>
    <string name="fb_login_protocol_scheme">fb1211280139003614</string>
    <string name="lb_welcome">CHÀO MỪNG BẠN ĐẾN VỚI K-DOCTOR</string>
    <string name="lb_for_got_password">Quên mật khẩu?</string>
    <string name="lb_register_new_account">Đăng ký tài khoản mới</string>
    <string name="lb_tittle_register">ĐĂNG KÝ TÀI KHOẢN</string>
    <string name="lb_full_name">Họ và tên</string>
    <string name="lb_phone">Số điện thoại</string>
    <string name="lb_avatar">Ảnh đại diện</string>
    <string name="lb_btn_back">Quay lại</string>
    <string name="lb_btn_register">Đăng ký</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Use to forgot password -->
    <string name="lb_title_forgot_password">QUÊN MẬT KHẨU</string>
    <string name="lb_description_forgot_password">Nếu quên mật khẩu, điền email của bạn vào ô dưới
        đây, chúng tôi sẽ gửi vào email cho bạn một mật khẩu mới</string>

    <string name="lb_btn_get_password">Lấy lại mật khẩu</string>
    <string name="title_activity_home">K-Doctor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nguyễn Văn Chiền</string>
    <string name="nav_header_subtitle">nvc.hut@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>

    <!--Use to navigate menu-->

    <string name="nav_connection">Kết nối thiết bị</string>
    <string name="nav_diagnostic">Chấn đoán</string>
    <string name="nav_trouble_code">Mã lỗi</string>
    <string name="nav_add_of_garage">Địa chỉ garage</string>
    <string name="nav_history">Lịch sử sửa chữa</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="nav_support">Hỗ trợ</string>
    <string name="nav_exit">Thoát</string>

    <string name="error_email_required">Bạn chưa nhập email</string>
    <string name="error_email_invalid">Địa chỉ email chưa hợp lệ</string>
    <string name="error_network">Vui lòng kiểm tra lại kết nối mạng</string>
    <string name="error_full_name">Bạn chưa nhập họ tên</string>

    <!--Use to connection screen-->
    <string name="lb_address_mac">MAC: </string>
    <string name="lb_expire_date">Hạn sử dụng: </string>
    <string name="lb_is_expired">Hết hạn sử dụng</string>
    <string name="lb_is_connected">Đã kết nối</string>
    <string name="menu_connection">Kết nối</string>
    <string name="menu_disconnect">Ngắt kết nối</string>
    <string name="menu_edit_device">Sửa thông tin</string>
    <string name="menu_add_date">Gia hạn thiết bị</string>
    <string name="lb_btn_scan">Quét lại</string>
    <string name="lb_edit_device">SỬA THÔNG TIN</string>
    <string name="lb_address_of_mac">Địa chỉ MAC</string>
    <string name="lb_code_of_vin">Mã VIN</string>
    <string name="lb_name_of_car">Tên xe</string>
    <string name="lb_btn_cancel">Hủy</string>
    <string name="lb_btn_update">Cập nhật</string>

    <string name="lb_diagnostic_find_trouble_code">Tìm lỗi</string>
    <string name="lb_trouble_code_find_garage">Tìm garage</string>

    <string name="msg_ble_is_not_available">Bluetooth không khả dụng</string>
    <string name="msg_ble_do_not_support">Thiết bị không hỗ trợ UART. Ngắt kết nối...</string>

    <string name="popup_title">Thoát ứng dụng</string>
    <string name="popup_message">Bạn có muốn thoát ứng dụng không?</string>
    <string name="popup_yes">Có</string>
    <string name="popup_no">KLhông</string>

    <string name="ble_not_supported">Bluetooth Low Energy không được hỗ trợ</string>
    <string name="msg_logout">Bạn có muốn thoát chương trình?</string>
    <string name="msg_ok">Đồng ý</string>
    <string name="msg_cancel">Hủy</string>
    <string name="title_activity_maps">Map</string>

    <string name="lb_support_tittle">THÔNG TIN HỖ TRỢ</string>
    <string name="lb_support_address">Địa chỉ: </string>
    <string name="lb_support_hot_line">Hot line: </string>
    <string name="lb_support_email">Email: </string>
    <string name="lb_support_web">Website: </string>

    <string name="direct">Chỉ đường</string>
    <string name="contact">Liên hệ</string>

    <string name="lb_diagnostic_min">Nhỏ nhất</string>
    <string name="lb_diagnostic_max">Lớn nhất</string>
    <string name="lb_diagnostic_greater">Vượt hạn mức</string>
    <string name="lb_diagnostic_less">Dưới hạn mức</string>

    <string name="lb_totals_errors">Số mã lỗi:</string>
    <string name="action_clear_codes">Xóa mã lỗi</string>
    <string name="obd_clearcodes">Xóa mã lỗi</string>
    <string name="lb_trouble_code_view_detail">Xem chi tiết</string>
    <string name="str_msg_network_fail">Vui lòng kiểm tra kết nối mạng</string>
    <string name="obd_clear_info">
This will reset the MIL and clear all emission-related diagnostic\n
information, including:\n
 - Diagnostic trouble codes\n
 - Freeze frame data\n
 - Oxygen sensor test data\n
 - Status of system monitoring tests\n
 - On-board monitoring tests results\n
 - Distance travelled while MIL activated\n
 - Number of warm-ups since DTCs cleared\n
 - Distance travelled since DTCs cleared\n
 - Engine run time while MIL activated\n
 - Time since DTCs cleared\n\n
Other manufacturer specific clearing/resetting actions may occur.\n
The loss of data may cause the vehicle to run poorly for a short \n
period of time while the ECU recalibrates itself.
     </string>

    <string name="error_password_required">Chưa nhập mật khẩu.</string>
    <string name="error_password_invalid">Mật khẩu phải lớn hơn 6 ký tự.</string>
    <string name="err_register_avatar">Thiếu ảnh đại diện!</string>
    <string name="error_driver_phone"> Hãy nhập số điện thoại </string>
    <string name="error_driver_password">Mật khẩu, ít nhất 6 kí tự</string>
    <string name="error_driver_repassword">Mật khẩu nhập lại không đúng</string>
    <string name="error_driver_driver_name">Hãy nhập Họ và Tên</string>
    <string name="service">Dịch vụ</string>

    <string name="gps_network_not_enabled">Bạn cần bật GPS</string>
    <string name="dialog_notice">Chú ý</string>
    <string name="open_location_settings">Cài đặt</string>
    <string name="close_location_settings">Thoát</string>
    <string name="lb_get_ten_garage">Xem 10 garage gần nhất</string>
    <string name="lb_garage_on_map_route">Chỉ đường</string>
    <string name="lb_garage_on_map_contact">Liên hệ</string>
    <string name="lb_garage_detail_contact">Cứu hộ</string>

    <!--crop-->
    <string name="crop__saving">Đang lưu ảnh…</string>
    <string name="crop__wait">Hãy chờ…</string>
    <string name="crop__pick_error">Không có hình ảnh khả dụng</string>
    <string name="crop__done">DONE</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">Thoát</string>
    <string name="str_registerning">Đang đăng ký...</string>

    <string name="action_add_history">Thêm lịch sử</string>
    <string name="action_add_device">Thêm thiết bị</string>
    <string name="msg_alert_connection">Vui lòng kết nối tới thiết bị trước khi sử dụng chức năng này!</string>
</resources>
