<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connection"
            android:icon="@drawable/nav_connection"
            android:title="@string/nav_connection" />
        <item
            android:id="@+id/nav_diagnostic"
            android:icon="@drawable/nav_diagnostic"
            android:title="@string/nav_diagnostic" />
        <item
            android:id="@+id/nav_trouble_code"
            android:icon="@drawable/nav_trouble_code"
            android:title="@string/nav_trouble_code" />
        <item
            android:id="@+id/nav_add_of_garage"
            android:icon="@drawable/nav_gara"
            android:title="@string/nav_add_of_garage"  />
       <!-- <item
            android:id="@+id/nav_history"
            android:icon="@drawable/nav_history"
            android:title="@string/nav_history"  />-->
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/nav_setting"
            android:title="@string/nav_setting"  />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/nav_support"
            android:title="@string/nav_support"  />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_exit"  />

    </group>

</menu>
