<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/shape_background"
    tools:context=".view.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tittle_padding_top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/shape_background"
            android:layout_height="@dimen/tittle_popup_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_normal"
                android:text="@string/lb_tittle_register"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_small_logo"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/fullName"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lb_full_name"
                android:textSize="@dimen/txt_normal"
                android:background="@android:color/darker_gray"
                android:drawableLeft="@drawable/ic_user_register"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/email"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:layout_marginTop="@dimen/dimen_button"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textSize="@dimen/txt_normal"
                android:background="@android:color/darker_gray"
                android:drawableLeft="@drawable/ic_email_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/phone"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:layout_marginTop="@dimen/dimen_button"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lb_phone"
                android:textSize="@dimen/txt_normal"
                android:background="@android:color/darker_gray"
                android:drawableLeft="@drawable/ic_phone_register"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:layout_marginTop="@dimen/dimen_button"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textSize="@dimen/txt_normal"
                android:background="@android:color/darker_gray"
                android:drawableLeft="@drawable/ic_pass_register"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/re_password"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:layout_marginTop="@dimen/dimen_button"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_prompt_password"
                android:textSize="@dimen/txt_normal"
                android:background="@android:color/darker_gray"
                android:drawableLeft="@drawable/ic_pass_register"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_button"
                android:background="@android:color/darker_gray"
                android:weightSum="6"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:layout_height="wrap_content">

                    <TextView
                        android:drawablePadding="8dp"
                        android:padding="10dp"
                        android:layout_marginTop="@dimen/dimen_button"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lb_avatar"
                        android:textSize="@dimen/txt_normal"
                        android:drawableLeft="@drawable/ic_image_profile" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:src="@drawable/ic_choice_picture"/>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray"
                    android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_back"
                    android:text="@string/lb_btn_back"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="#16ab7b"
                    android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_register"
                    android:text="@string/lb_btn_register"
                    android:background="@drawable/ripple"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>