<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/shape_background"
            android:layout_height="@dimen/tittle_popup_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_normal"
                android:text="@string/lb_edit_device"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_small_logo"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_address_of_mac"/>

            <EditText
                android:id="@+id/edit_addressOfMac"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_normal"
                android:background="@color/color_disable_edit_text"
                android:text="HG:45:RT:45:TG:67"
                android:clickable="false"
                android:editable="false"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_code_of_vin"/>

            <EditText
                android:id="@+id/edit_vin"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_normal"
                android:background="@color/color_disable_edit_text"
                android:text="HG:45:RT:45:TG:67"
                android:clickable="false"
                android:editable="false"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_name_of_car"/>

            <EditText
                android:id="@+id/edit_nameOfCar"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_normal"
                android:background="@color/bg_edit_text"
                android:text="HG:45:RT:45:TG:67"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="@color/bg_edit_text"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:text="@string/lb_btn_cancel"
                        android:padding="7dp"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="#16ab7b"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_update"
                        android:text="@string/lb_btn_update"
                        android:padding="7dp"
                        android:background="@drawable/ripple"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
